[metadata]
name=codecad
verion=0.1.0
description=OpenCL powered programming CAD
keywords=cad, csg
url=http://github.com/bluecube/codecad
author=Kuba Marek
author_email=blue.cube@seznam.cz
license=GPL

[options]
packages=find:
zip_safe=true
install_requires=
    numpy
    pyopencl>=2017.2.2
    pillow
    pymcubes
    numpy-stl
    py-flags
setup_requires=pytest-runner
tests_require=
    pytest>=3.1.0
    hypothesis
    trimesh
python_requires=~=3.4

[options.package_data]
*=*.cl, *.h

[aliases]
test=pytest

[tool:pytest]
filterwarnings=error
testpaths=tests

[coverage:run]
branch=True

[pylama]
ignore=E501,E741,E203,W0401
paths=codecad examples tests
linters=pycodestyle,pyflakes,pylint,mccabe

[pylama:pylint]
disable=C0111,C0330,C0301,R1705,R0902,R0903,R0913
ignored-classes=mem_flags
ignored-modules=pyopencl.cltypes
variable-rgx=^[_a-z][a-z0-9]*(_[a-z0-9]+)*$
argument-rgx=^[_a-z][a-z0-9]*(_[a-z0-9]+)*$
